2008-03-05  Matthew Grooms
	* src/racoon/cfparse.y: properly initialize the unity network struct

2008-03-05  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/pfkey.c: better handling for pfkey socket read errors

2008-02-25  Emmanuel Dreyfus <manu@netbsd.org>
        From Brian Haley <brian.haley@hp.com>
	* src/racoon/ipsec_doi.c: Do check SPI size (it was not due to a typo)

2008-02-22  Emmanuel Dreyfus <manu@netbsd.org>
	From Brian Haley <brian.haley@hp.com>
	* src/racoon/isakmp.c: Fix address length

2008-01-11  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/handler.[ch]: added an 'established' arg to getph1byaddr()
	From Krzysztof Oledzki <olel@ans.pl>:
	* src/racoon/isakmp.c: Only search for established ph1 handles in
	  DPD (also reported new getph1byaddr() arg)
	* src/racoon/isakmp_inf.c: added some details to some logs (also
	  reported new getph1byaddr() arg) 
	* src/racoon/crypto_openssl.c: fixed compilation with idea and
	  recent gcc
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: reset iph1->dpd_r_u in the scheduler's
	  callback, to avoid some access to freed memory

2007-11-29  Yvan Vanhullebus  <vanhu@netasq.com>
	From Natanael Copa <natanael.copa@gmail.com>:
	* src/racoon/Makefile.am: fixed a race condition when building
	  yacc stuff.
	
2007-11-06  Yvan Vanhullebus  <vanhu@netasq.com>
	From Scott Lamb <slamb@slamb.org>
	* src/racoon/plog.[ch]: new plog macro
	* src/racoon/kmpstat.c: plog changed to _plog to work with new plog macro
	* src/racoon/crypto_openssl.c: includes plog.h to work with the
	  new plog macro

2007-10-15  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/libipsec/pfkey.c: Try to increase the buffer size of the
	  pfkey socket, this may help things when we have a huge SPD.

2007-09-19  Matthew Grooms <mgrooms@shrew.net>
	From Joy Latten <latten@austin.ibm.com>
	* configure.ac: Fix autoconf check for selinux support.

2007-09-03  Matthew Grooms <mgrooms@shrew.net>